--- a/index.html
+++ b/index.html
@@ -2,26 +2,41 @@
 <html>
   <head>
     <title>My Favorites</title> 
+    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <style>
+   ul{
+    list-style-type: square;
+    color: red;
+  }
+  </style>
   </head>
   <body>
+  <header>
     <h1>My Favorite Things</h1>
-
+    <h1>My Favorite Things - Part 2</h1>
+   
     <br>
     <hr>
     <br>
 
+  </header>
+
+  <section style= "font-size: 20px;">
     <h2>My Favorite Sport</h2>
 
     <p> Soccer is my favorite sport. The atmosphere, skill, and situations presented within the game present it's charm which attract billions worldwide. It gives those with no opportunities the ability to do something and succeed.
     </p>
 
+  </section>
+
+  <section>
     <h2>Favorite Foods</h2>
 
-    <ol type="1">
+    <ul>
       <li> <i> Sushi </i> </li>
       <li> <i> Pizza </i> </li>
       <li> <i> Gyro/Shawarma </i> </li>
-    </ol> 
+    </ul> 
 
     <img src=https://images.unsplash.com/photo-1579871494447-9811cf80d66c?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c3VzaGl8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60 alt="Image of Sushi" width="400px" height="300px">
 
@@ -29,6 +44,9 @@
 
     <a href= "https://www.tasteofhome.com/recipes/california-sushi-rolls/" target="_blank">Recipe For Sushi</a>
 
+  </section>
+
+  <section>
     <h2> Study Examples </h2>
 
     <ul>
@@ -46,8 +64,20 @@
     <p> <b> Example Paragraph 1 </b> </p>
     <p> <strong> Example Paragraph 2 </strong> </p>
     <p> <i> Example Paragraph 3 </i> </p>
-
+    <p> <mark> Example Paragraph 4 </mark> </p>
+    <p> <em> Example Paragraph 5 </em> </p>
     <!-- Remember to review strong, b, i, etc -->
+
+    <p style="color: hsl(120, 10%, 50%);"> Example Paragraph Color/Lightness HSL</p>
+    <p style="font-weight: bold"> Example Paragraph Bold Font Color</p>
+    <p style="color: rgb(250, 40, 100);"> RGB Example Paragraph </p>
+    <p style="color: green; font-size: 12px;"> Font-Size and Color Example Pargraph </p>
+  </section>
+
+  <footer>
+    <p> Made By Denys Kolomiiets </p>
+
+  </footer>
 
   </body>
 </html>
